<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright or © or Copr. Moribus (2013)
  ~ Copyright or © or Copr. ProkopyL <prokopylmc@gmail.com> (2015)
  ~ Copyright or © or Copr. Amaury Carrade <amaury@carrade.eu> (2016 – 2021)
  ~ Copyright or © or Copr. Vlammar <valentin.jabre@gmail.com> (2019 – 2021)
  ~
  ~ This software is a computer program whose purpose is to allow insertion of
  ~ custom images in a Minecraft world.
  ~
  ~ This software is governed by the CeCILL license under French law and
  ~ abiding by the rules of distribution of free software.  You can  use,
  ~ modify and/ or redistribute the software under the terms of the CeCILL
  ~ license as circulated by CEA, CNRS and INRIA at the following URL
  ~ "http://www.cecill.info".
  ~
  ~ As a counterpart to the access to the source code and  rights to copy,
  ~ modify and redistribute granted by the license, users are provided only
  ~ with a limited warranty  and the software's author,  the holder of the
  ~ economic rights,  and the successive licensors  have only  limited
  ~ liability.
  ~
  ~ In this respect, the user's attention is drawn to the risks associated
  ~ with loading,  using,  modifying and/or developing or reproducing the
  ~ software by the user in light of its specific status of free software,
  ~ that may mean  that it is complicated to manipulate,  and  that  also
  ~ therefore means  that it is reserved for developers  and  experienced
  ~ professionals having in-depth computer knowledge. Users are therefore
  ~ encouraged to load and test the software's suitability as regards their
  ~ requirements in conditions enabling the security of their systems and/or
  ~ data to be ensured and,  more generally, to use and operate it in the
  ~ same conditions as regards security.
  ~
  ~ The fact that you are presently reading this means that you have had
  ~ knowledge of the CeCILL license and that you accept its terms.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.tehbrian</groupId>
    <artifactId>ImageOnMap</artifactId>
    <version>6.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.charset>UTF-8</project.charset>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>${project.charset}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.charset}</project.reporting.outputEncoding>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.charset}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <finalName>${project.name}-${project.version}</finalName>
                    <archive>
                        <manifest>
                            <addDefaultEntries>false</addDefaultEntries>
                        </manifest>
                        <manifestEntries>
                            <Automatic-Module-Name>${project.groupId}</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
